# kovaaks-rank-calculator

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
bindings/python/: kovaaks_rank_api.py
cli/: kovaaks-rank-cli.ts
docs/: README.md  api-modes.md  cli-usage.md  python-api.md  setup.md
examples/: python_example.py
examples/data/: benchmarks.json
examples/powershell/: basic_example.ps1
examples/python/: basic_example.py  config_example.py  override_example.py  rank_history.py  rank_history_multi.py  rank_history_simple.py
sample-data/: test-input.json
src/: README.md  rankCalculations.ts  rankUtils.ts
src/types/: benchmarks.ts
