[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kovaaks-rank-api"
version = "0.1.0"
description = "Python bindings for KovaaKs Rank API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "bindings/python"}
py-modules = ["kovaaks_rank_api"]
